      - Added :cookies command. [b3]
      - :extadd now supports remote URLs as well as local files on Firefox 4. [b2]
      - Added :if/:elseif/:else/:endif conditionals. [b3]
      - Added -charset and -post to :bmark. [b5]
      - Added -keyword, -tags, -title to :delbmarks. [b2]
      - Added :extrehash, :exttoggle, :extupdate, and :rehash commands. [b5]
      - Added :feedkeys command. [b4]
      - Added -sort option to :history. [b4]
      - Added several new options, including -javascript, to :abbreviate and
        :map. [b2]
      - Added :mksyntax command to auto-generate Vim syntax files. [b4]
      - :open now only opens files beginning with /, ./, ../, or ~/ [b1]
      - :saveas now provides completions for default file names, and
        automatically chooses a filename when the save target is a
        directory. [b4]
      - :sidebar now accepts a ! flag to toggle the sidebar rather
        than open it unconditionally. [b6]
      - Added :write !cmd and :write >>file. [b3]
      - Added :yank command. [b3]
      - :delmarks, :marks and :qmarks now also accept ranges, same as
        :delqmarks. [b4]
      - :command now accepts comma-separated alternative command names. [b4]
      - :command -complete custom now also accepts a completions array, see
        :h :command-completion-custom. [b4]
    * Improvements to :style and :highlight:
      - Added -link flag to :highlight. [b4]
      - Added -agent flag to :style. [b2]
      - The -append flag now updates existing properties rather than
        simply appending its arguments to the previous value. [b4]
      - Active filters are now highlighted in :style listings. [b4]
      - :style-related commands now divide their completions between
        those active and inactive for the current site. [b4]
      - CSS property name completion is now available. [b4]
    * IMPORTANT option changes:
      - Option value quoting has changed. List options will